# agile

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
docs/: index.md
docs/fundamentals/: agile-vs-devops.md  introduction.md  principles.md  scrum-framework.md
fundamentals/agile-vs-devops/: index.html
fundamentals/introduction/: index.html
fundamentals/principles/: index.html
fundamentals/scrum-framework/: index.html
search/: search_index.json
