[project]
name = "agile"
version = "0.1.0"
description = "Agile methodology documentation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["README.md"]

[tool.hatch.build.force-include]
"README.md" = "README.md"
